# typack

./: .gitignore  .oxfmtrc.json  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  MISSING_FEATURES.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  codspeed.yml  release_napi.yml  repl.yml
.husky/: pre-commit
benches/: bundle.rs
benches/fixtures/ts-entry/: collections.ts  index.ts  types.ts
docs/: design.md
napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
napi/src/: lib.rs
repl/: index.html  package.json  vite.config.ts
repl/src/: App.vue  style.css  types.ts
repl/src/components/: EditorPanel.vue  HeaderBar.vue  OptionsPanel.vue  OutputPanel.vue
repl/src/composables/: useFiles.ts  useTheme.ts  useTypack.ts  useUrlState.ts
src/: cli.rs  helpers.rs  lib.rs  main.rs  options.rs
src/generate_stage/: analysis.rs  emit.rs  finalizer.rs  mod.rs  namespace.rs  output_assembler.rs  render_module.rs  rewriter.rs  source_joiner.rs  sourcemap.rs  types.rs
src/link_stage/: exports.rs  mod.rs  module_meta.rs  namespace.rs  needed_names.rs  rename.rs  resolved_exports.rs  types.rs  warnings.rs
src/scan_stage/: collectors.rs  graph.rs  mod.rs  resolution.rs  tsconfig.rs
src/types/: ast_table.rs  mod.rs  module.rs  module_info.rs  module_table.rs  symbol_ref.rs
tests/: cli.rs  conformance.rs  isolated_declarations.rs  needed_names_semantic.rs  real_world.rs  resolver_external.rs  rolldown_plugin_dts.rs  semantic_renamer.rs  sourcemap.rs  warnings.rs
tests/common/: mod.rs
tests/fixtures/export-alias-needed-names/: index.d.ts  snapshot.d.ts  types.d.ts
tests/fixtures/export-alias-rename/: index.d.ts  snapshot.d.ts  types.d.ts
tests/fixtures/external-namespace-merge/: index.d.ts  lib-named.d.ts  lib-ns.d.ts  snapshot.d.ts
tests/fixtures/external-namespace-to-named/: lib.d.ts  snapshot.d.ts
tests/fixtures/import-then-reexport-treeshake/: index.d.ts  lib.d.ts  snapshot.d.ts
tests/fixtures/inline-import-dead-statement-no-propagate/: dep.d.ts  index.d.ts  mod.d.ts  snapshot.d.ts
tests/fixtures/inline-import-with-reexport/: dep.d.ts  index.d.ts  snapshot.d.ts
tests/fixtures/multi-entry-dep-is-entry/: config.json  index.d.ts  snapshot-index.d.ts  snapshot-utils.d.ts
tests/fixtures/multi-entry-independent/: config.json  snapshot-a.d.ts  snapshot-b.d.ts
tests/fixtures/multi-entry-with-empty/: config.json  snapshot-a.d.ts
tests/fixtures/sourcemap-composition/: index.d.ts  index.d.ts.map  mod.d.ts.map
tests/fixtures/star-reexport-local-export-alias/: dep.d.ts  index.d.ts  mid.d.ts  snapshot.d.ts
tests/fixtures/unexported-variable-treeshake/: index.d.ts
tests/real-world/: README.md
tests/real-world-ts/vitest-pretty-format-types/: config.json
tests/real-world-ts/vitest-utils-bundle/: config.json  index.ts  tsconfig.json
tests/real-world/core/: compiler-core.d.ts  compiler-core.snapshot.d.ts  compiler-dom.d.ts  compiler-dom.snapshot.d.ts  compiler-sfc.d.ts  compiler-sfc.snapshot.d.ts  compiler-ssr.d.ts  compiler-ssr.snapshot.d.ts  reactivity.d.ts  reactivity.snapshot.d.ts  runtime-core.d.ts  runtime-dom.d.ts  runtime-dom.snapshot.d.ts  server-renderer.d.ts  shared.d.ts  shared.snapshot.d.ts  vue-compat.d.ts  vue-compat.snapshot.d.ts  vue.d.ts  vue.snapshot.d.ts
(+465 files in other folders)
