[package]
name = "typack"
version = "0.1.0"
authors = ["Dunqing <dengqing0821@gmail.com>"]
categories = ["compilers", "development-tools", "web-programming"]
edition = "2024"
homepage = "https://oxc.rs"
keywords = ["JavaScript", "TypeScript", "dts", "bundler", "parser"]
license = "MIT"
repository = "https://github.com/Dunqing/typack"
rust-version = "1.91.0"
description = "A native TypeScript declaration (.d.ts) bundler built on Oxc crates."
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit_bindings = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
self_named_module_files = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"
map_with_unused_argument_over_ranges = "warn"
unused_result_ok = "warn"
pathbuf_init_then_push = "warn"
pub_underscore_fields = "warn"
non_zero_suggestions = "warn"
precedence_bits = "warn"
complexity = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
doc_markdown = "allow"
similar_names = "allow"
fn_params_excessive_bools = "allow"
too_many_arguments = "allow"
non_std_lazy_statics = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
cognitive_complexity = "allow"
non_send_fields_in_send_ty = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
branches_sharing_code = "allow"
fallible_impl_from = "allow"
useless_let_if_seq = "allow"
impl_trait_in_params = "allow"
multiple_crate_versions = "allow"
significant_drop_in_scrutinee = "warn"
iter_on_single_items = "warn"
unused_peekable = "warn"
too_long_first_doc_paragraph = "warn"
suspicious_operation_groupings = "warn"
redundant_clone = "warn"

[features]
cli = ["bpaf"]

[lib]
doctest = false

[[bin]]
name = "typack"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
cow-utils = "0.1.3"
oxc_allocator = "0.115.0"
oxc_ast = "0.115.0"
oxc_ast_visit = "0.115.0"
oxc_codegen = { version = "0.115.0", features = ["sourcemap"] }
oxc_diagnostics = "0.115.0"
oxc_index = { version = "4.1.0", features = ["nonmax", "serde"] }
oxc_parser = { version = "0.115.0", features = ["regular_expression"] }
oxc_resolver = "11.19.0"
oxc_semantic = "0.115.0"
oxc_sourcemap = "6.0.1"
oxc_span = "0.115.0"
oxc_syntax = "0.115.0"
rustc-hash = "2"
bpaf = { version = "0.9", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "bundle"
harness = false

[profile.dev]
debug = false

[profile.test]
debug = false

[profile.bench]
lto = "thin"
